# PrivacyChatBox

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  LICENSE.md  README.md  ai_providers.py  app.py  auth.py  azure_auth.py  database.py  database_check.py  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  file_processor.py  migration_add_dlp_columns.py  migration_add_local_llm_columns.py  migration_pattern_levels.py  model_utils.py  models.py  ms_dlp.py  pdf_export.py  privacy_scanner.py  pyproject.toml  pyproject.toml.bak  setup.sh  shared_sidebar.py  style.py  test_local_llm.py  test_optimizations.py  utils.py  utils_auth.py
.streamlit/: config.toml
attached_assets/: Pasted-1-Regex-Engine-Optimization-Pre-compile-Regex-Patterns-Current-issue-Regex-patterns-are-likely--1743800231017.txt  Pasted-Full-Python-Application-Development-Prompt-for-PrivacyChatBoX-Project-Overview-Develop-a-full-featur-1743537019603.txt  Pasted-Settings-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-settings-enable--1743599448437.txt  Pasted-User-Management-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-bee-1743580677604.txt  Pasted-qlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-enable-ms-dlp-of-relation-1743599519106.txt  Pasted-sqlalchemy-orm-exc-DetachedInstanceError-Instance-User-at-0x7f13a0700250-is-not-bound-to-a-Sessio-1743581214898.txt  Pasted-sqlalchemy-orm-exc-DetachedInstanceError-Instance-User-at-0x7f77d3f36dd0-is-not-bound-to-a-Sessio-1743582087544.txt  (+1 more)
docs/: README.md  (+10 more)
(+7 files in other folders)
